--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,46 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# --- Node / JS (anywhere in repo) ---
+**/node_modules/
+**/coverage/
+**/build/
+**/dist/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# --- Java / Maven ---
+**/target/
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# --- Environment files (global) ---
+.env
+.env.*
 .env.local
+.env.development
 .env.development.local
+.env.test
 .env.test.local
+.env.production
 .env.production.local
 
-.vscode/*
-
+# --- Logs ---
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+
+# --- IDE / Editor ---
+# VS Code
+.vscode/
+
+# IntelliJ / JetBrains
+.idea/
+*.iml
+out/
+
+# Eclipse
+.project
+.classpath
+.settings/
+
+# --- OS / misc ---
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
